# rust-bookstore

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  env.sh  mac_env.sh  nohup.out  service.yaml
k8s/: deployment.yaml
scripts/: gen_env.sh  get_book.sh  post_book.sh  tail_book.sh
src/: cassandra_utils.rs  converters.rs  dao.rs  dynamo_utils.rs  errors.rs  eureka.rs  main.rs  model.rs  network.rs  request.rs  server.rs  service.rs  settings.rs
