[package]
name = "bookstore"
version = "0.1.0"
authors = ["Jack Wright <ayax79@gmail.com>"]

[[bin]]
name = "bookstore"
path = "src/main.rs"

[dependencies]
tokio-core = "0.1.11"
hyper = "0.11"
futures = "0.1"
libc = "0.2"
time = "0.1"
regex = "0.2"
rusoto_core =  "0.31"
rusoto_dynamodb = "0.31"
uuid = {version = "0.4", features = ["v4", "rustc-serialize"]}
router = "0.5.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"

env_logger = "0.4"

rust-eureka = "0.1.1"
config = "0.8"
pnet = "0.21.0"
ipnetwork = "0.12"